hard-gists/94a400a7bce6f8cfc9e7eff87270c9e9/run.log
=== Docker Run Log for 94a400a7bce6f8cfc9e7eff87270c9e9 ===
Started at: Mi 29. Okt 18:26:44 CET 2025

[2025-10-29 18:26:44] START: Running container for 94a400a7bce6f8cfc9e7eff87270c9e9
[2025-10-29 18:26:44] SUCCESS: Container 832f17bfe6056fe75ef6896bfd263c91993354f310930dc077af6310632b84a4 started for 94a400a7bce6f8cfc9e7eff87270c9e9
=== Container logs for 94a400a7bce6f8cfc9e7eff87270c9e9 ===
  File "/snippet.py", line 21
    print change
    ^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 94a400a7bce6f8cfc9e7eff87270c9e9 ===
[2025-10-29 18:26:46] INFO: Container 832f17bfe6056fe75ef6896bfd263c91993354f310930dc077af6310632b84a4 has stopped
